 @startuml
'https://plantuml.com/class-diagram
class ToDoList{
    main()
    start()
}
class TabContainerController {
    - tPane : TabPane
    - homeTab : Tab
    - mainWindow : AnchorPane

    + TabContainerController()
    + initialize()
    + buildWindow(AnchorPane)

    - buildReadMe(Tab)
    - buildMenu(AnchorPane)
    - read()
}
class ToDoListMenuController{
    - menu : ToDoListMenu
    - itemsDisplay : ArrayList<BorderPane>
    - tPane : TabPane

    + viewMenu : Menu
    + editMenu : Menu
    + fileMenu : Menu
    + myMenu : MenuBar

    + ToDoListMenuController()
    + initialize()
    + onSaveClicked(Action Event)
    + onLoadClicked(Action Event)
    + onAddClicked(Action Event)
    + onDeleteClicked(Action Event)
    + onShowAllClicked(Action Event)
    + onFilterCompleteClicked(Action Event)
    + onFilterIncompleteClicked(Action Event)
    + onClearClicked(Action Event)

    + saveItems(ArrayList<String>)
    + saveItems(String)
    + loadItems(ArrayList<String>)
    + loadItems(String)

    - filterItems(boolean)
    - tabTitle(boolean)

    + setTabPane(TabPane)
}
class ToDoListMenu{
    - savePath : String
    - loadPath : String
    - items : ArrayList<ToDoListItem>

    + loadItems(String)
    + loadItems(ArrayList<String>)
    + saveItems(String)
    + saveItems(ArrayList<String>)
    + addItem(ToDoListItem)
    + getItems()
}
class ToDoListItemController{
    - TitleTextField : TextField
    - DescriptionTextArea : TextArea
    - CompletionCheckBox : CheckBox
    - DueDateField : DatePicker
    - item : ToDoListItem

    + ToDoListItemController()
    + initialize()
    + Enter(KeyEvent)
    + DueDateChanged(Action Event)
    + StatusChanged(Action Event)
    + TitleEntered(Action Event)
    + getItem()

}
class ToDoListItem {

        - title : String
        - description : String
        - completionStatus : boolean
        - dueDate : LocalDate

        + setTitle(String)
        + setDescription(String)
        + setCompletionStatus(boolean)
        + setDueDate(LocalDate)
        + getTitle()
        + getDescription()
        + getCompletionStatus()
        + getDueDate()
}
ToDoList *-> TabContainerController
TabContainerController *-> ToDoListMenuController
ToDoListMenuController *-> ToDoListMenu
ToDoListMenuController o---> ToDoListItemController
ToDoListMenu -- ToDoListItem
ToDoListItemController *-> ToDoListItem

@enduml